--- a/app/admin/templates/pages/forms/basic_elements.html
+++ b/app/admin/templates/pages/forms/basic_elements.html
@@ -42,8 +42,8 @@
                           <td>cdddd</td>
                           <td>cnsv</td>
                           <td>fdj</td>
-                          <td width="130">
-                              <a href="#" class="btn btn-secondary btn-sm">view</a>
+                          <td>
+                              <a href="{{url_for('admin_blueprint.admin_student_info')}}" class="btn btn-secondary btn-mx">view</a>
                           </td>
                         </tr>
                       </tbody>
@@ -53,6 +53,21 @@
               </div>
             </div>
           </div>
+          <nav aria-label="...">
+            <ul class="pagination">
+              <li class="page-item disabled">
+                <a class="page-link">Previous</a>
+              </li>
+              <li class="page-item"><a class="page-link" href="#">1</a></li>
+              <li class="page-item active" aria-current="page">
+                <a class="page-link" href="#">2</a>
+              </li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item">
+                <a class="page-link" href="#">Next</a>
+              </li>
+            </ul>
+          </nav>
         </div>
       </div>
         <!-- content-wrapper ends -->
@@ -66,6 +81,8 @@
   <!-- container-scroller -->
   <!-- plugins:js -->
  
+  <!-- pagination -->
+  
 
 {% endblock content %}
 
