--- a/app/admin/templates/layouts/admin_main.html
+++ b/app/admin/templates/layouts/admin_main.html
@@ -170,17 +170,13 @@
       {% include "partials/_footer.html" %}
     </div>
   </div>
-
-
-
-
-
 </body>
-<!-- Specific JS goes HERE -->
-{% block javascripts %}{% endblock javascripts %}
+
 <!-- plugins:js -->
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <!-- Specific JS goes HERE -->
+{% block javascripts %}{% endblock javascripts %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="../static/admin_vendors/js/vendor.bundle.base.js"></script>
@@ -212,7 +208,7 @@
 
 <!-- End custom js for this page-->
 
-<script>
+<script type="text/javascript">
   var myVar;
   function myFunction() {
     myVar = setTimeout(showPage, 1500);
