--- a/app/class_teacher/templates/pages/user-management/teacher-list.html
+++ b/app/class_teacher/templates/pages/user-management/teacher-list.html
@@ -128,6 +128,7 @@
                                             <div class="form-group">
                                                 <label class="form-control-label" for="class"> Class</label>
                                                 <select name="grade" id="class" class="form-control">
+                                                    <option value="">--select--</option>
                                                     <option value="">XII</option>
                                                     <option value="">XI</option>
                                                     <option value="">X</option>
@@ -141,6 +142,7 @@
                                             <div class="form-group">
                                                 <label class="form-control-label" for="class"> Section</label>
                                                 <select name="section" id="section" class="form-control">
+                                                    <option value="">--select--</option>
                                                     <option value="">A</option>
                                                     <option value="">B</option>
                                                     <option value="">C</option>
@@ -155,7 +157,7 @@
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save</button>
+                <button type="button" class="btn btn-primary" id="update">Update</button>
                 </div>
             </div>
             </div>
@@ -249,6 +251,29 @@
             }
         })
     }
+
+    $("#update").on("click", function () {
+        var form = document.getElementById("user-form");
+        var data = new FormData(form);
+        $.ajax({
+            type: 'POST',
+            url: '/save-user',
+            data: data,
+            contentType: false,
+            cache: false,
+            processData: false,
+
+            success: function (res) {
+                swal("Information successfully saved", "Click Ok to continue", "success")
+                    .then(function () {
+                        $('#user-form').trigger('reset')
+                        window.location = "/teacher-list"
+                    })
+
+            },
+        });
+    });
+
 
 </script>
 {% endblock javascripts %}
